--- a/restroproject/template/table_booking.html
+++ b/restroproject/template/table_booking.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel Booking Form</title>
-  <link rel="stylesheet" href="css/booking.css">
+  <title>Table Booking Form</title>
+  <link rel="stylesheet" href="{% static 'css/booking.css' %}">
 </head>
 <body>
     <div class="background">
