--- a/restroproject/template/index.html
+++ b/restroproject/template/index.html
@@ -616,7 +616,7 @@
                     <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
                         <h1 class="text-white mb-4">Book A Table Online</h1>
-                        <form method="post" action="{% url 'reservation' %}">
+                        <form method="POST" action="{% url 'reservation_view' %}">
                             {% csrf_token %}
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -656,11 +656,11 @@
                                         <label for="message">Special Request</label>
                                     </div>
                                 </div>
-                                
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                                    </div>
-                                
+
+                                <div class="col-12">
+                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
+                                </div>
+
                             </div>
                         </form>
                     </div>
